--- a/pokedex.html
+++ b/pokedex.html
@@ -28,8 +28,8 @@
                     <span class="poke-id"></span>
                   </div>
                   <div class="screen__image">
-                    <img src="" class="poke-front-image" alt="front">
-                    <img src="" class="poke-back-image" alt="back">
+                    <img src="" class="poke-front-image" id="poke-front-image" alt="front">
+                    <img src="" class="poke-back-image" id="poke-back-image" alt="back">
                   </div>
                   <div class="screen__description">
                     <div class="stats__types">
@@ -76,7 +76,7 @@
         </div>
         <div class="right-container__buttons">
           <div><input name="inputBuscar" id="inputBuscar" placeholder="pikachu"></div>
-          <div class="right-button" >Buscar</div>
+          <button class="botonBuscar" onClick="consultarPokemon()">Buscar Pokemon</button>
         </div>
       </div>
     </div>
